@@ -734,9 +734,10 @@ class BaseInlinePanel(EditHandler):
 
 
 class InlinePanel:
-    def __init__(self, relation_name, panels=None, classname='', label='', help_text='', min_num=None, max_num=None):
+    def __init__(self, relation_name, panels=None, classname='', heading='', label='', help_text='', min_num=None, max_num=None):
         self.relation_name = relation_name
         self.panels = panels
+        self.heading = heading or label
         self.label = label
         self.help_text = help_text
         self.min_num = min_num
@@ -751,7 +752,8 @@ class InlinePanel:
             'relation_name': self.relation_name,
             'related': related,
             'panels': self.panels,
-            'heading': self.label,
+            'heading': self.heading,
+            'label': self.label,
             'help_text': self.help_text,
             # TODO: can we pick this out of the foreign key definition as an alternative?
             # (with a bit of help from the inlineformset object, as we do for label/heading)
